fade ins for leaderboard, overflow fix for stories

--- a/client/src/styles/_Explore.scss
+++ b/client/src/styles/_Explore.scss
@@ -81,6 +81,7 @@
     font-weight: bold;
     font-size: 17px;
   }
+  overflow-x: hidden;
 }
 
 .SingleStoryCard-StoryTitle {
